SERVER-6065 NT Service stop does not exit cleanly